Selected labels should have a 'selected' *class*, not an attribute

--- a/github/labels_on_pull_requests/label_manager.handlebars
+++ b/github/labels_on_pull_requests/label_manager.handlebars
@@ -25,7 +25,7 @@
                         <div class="select-menu-list" data-filterable-for="label-filter-field" data-filterable-type="substring">
                             {{#each labels}}
                             {{#if this.selected}}
-                            <div class="select-menu-item js-navigation-item labelstyle-{{this.color}}" selected>
+                            <div class="select-menu-item js-navigation-item labelstyle-{{this.color}} selected">
                             {{else}}
                             <div class="select-menu-item js-navigation-item labelstyle-{{this.color}}">
                             {{/if}}
